# fda_rust_openapi

./: Cargo.toml  README.md
docs/: AbridgedFoodItem.md  AbridgedFoodNutrient.md  BrandedFoodItem.md  BrandedFoodItemLabelNutrients.md  BrandedFoodItemLabelNutrientsCalcium.md  BrandedFoodItemLabelNutrientsCalories.md  BrandedFoodItemLabelNutrientsCarbohydrates.md  BrandedFoodItemLabelNutrientsFat.md  BrandedFoodItemLabelNutrientsFiber.md  BrandedFoodItemLabelNutrientsIron.md  BrandedFoodItemLabelNutrientsPotassium.md  BrandedFoodItemLabelNutrientsProtein.md  BrandedFoodItemLabelNutrientsSaturatedFat.md  BrandedFoodItemLabelNutrientsSugars.md  BrandedFoodItemLabelNutrientsTransFat.md  FdcApi.md  FoodAttribute.md  FoodAttributeFoodAttributeType.md  FoodCategory.md  FoodComponent.md  FoodListCriteria.md  FoodNutrient.md  FoodNutrientDerivation.md  FoodNutrientSource.md  FoodPortion.md  FoodSearchCriteria.md  FoodUpdateLog.md  FoodsCriteria.md  FoundationFoodItem.md  GetFoods200ResponseInner.md  InlineResponse200.md  InputFoodFoundation.md  InputFoodSurvey.md  MeasureUnit.md  Nutrient.md  NutrientAcquisitionDetails.md  NutrientAnalysisDetails.md  NutrientConversionFactors.md  RetentionFactor.md  SampleFoodItem.md  (+5 more)
src/apis/: configuration.rs  fdc_api.rs  mod.rs
src/models/: abridged_food_item.rs  abridged_food_nutrient.rs  branded_food_item.rs  branded_food_item_label_nutrients.rs  branded_food_item_label_nutrients_calcium.rs  branded_food_item_label_nutrients_calories.rs  branded_food_item_label_nutrients_carbohydrates.rs  branded_food_item_label_nutrients_fat.rs  mod.rs  (+36 more)
